[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-openai>=0.3.27",
    "uvicorn[standard]>=0.35.0",
]
